Closed Bug 539423 Opened 15 years ago Closed 15 years ago

ASSERTION: Mouse move must have some target content. file: content/events/src/nsEventStateManager.cpp

Categories

(Core :: DOM: Events, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: hsivonen, Assigned: hsivonen)

References

()

Details

Attachments

(1 file)

Steps to reproduce:

1) Load https://bugzilla.mozilla.org/attachment.cgi?id=387222 (with or without html5.enable) in a debug build.

Actual results:
The assertion at http://mxr-test.konigsberg.mozilla.org/mozilla-central/source/content/events/src/nsEventStateManager.cpp#3565 fires.

Expected results:
No assertion.
Ok, that assertion shouldn't be an assertion, probably not even a warning.
Assignee: nobody → hsivonen
Status: NEW → ASSIGNED
Attachment #421618 - Flags: review?(Olli.Pettay)
Comment on attachment 421618 [details] [diff] [review]
Remove the assertion

Yeah.

Need to change ESM at some point to handle document object as target, but there is no need to assert anything, since there is nothing bad happening.
Attachment #421618 - Flags: review?(Olli.Pettay) → review+
Thanks.

http://hg.mozilla.org/mozilla-central/rev/95b290937988
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: