Bug 539423 - Remove bogus assertion: Mouse move must have some target content. r=Olli.Pettay.